--- a/manifest.json
+++ b/manifest.json
@@ -39,6 +39,7 @@
                     "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
                     "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+                    "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
@@ -58,7 +59,9 @@
                         "appid" : "wx55278d4c65cad0da",
                         "UniversalLinks" : ""
                     }
-                }
+                },
+                "geolocation" : {},
+                "maps" : {}
             },
             "splashscreen" : {
                 "androidStyle" : "default",
